<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.voterapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_election_details"
        android:name="com.example.voterapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_election_details"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.voterapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.voterapp.ui.tools.ToolsFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_tools" />


</navigation>