<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingBottom="@dimen/layout_padding_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_user_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_16dp"
                        android:clickable="true"
                        android:tint="@color/white"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_person_black_24dp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_circular_user_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/margin_16dp"
                        android:clickable="true"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Hello, Admin"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_16dp"
                    android:paddingTop="@dimen/margin_16dp"
                    android:paddingRight="@dimen/margin_16dp">

                    <LinearLayout
                        android:id="@+id/ll_account_overview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:alpha="0.5"
                            android:background="@color/white" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="@dimen/layout_padding_8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_centerVertical="true"
                                android:gravity="center"
                                android:text="@string/election_summery"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:tint="@color/white" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_recent_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:alpha="0.5"
                            android:background="@color/white" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/election_details"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="24dp"
                        android:paddingBottom="@dimen/layout_padding_16dp">

                        <LinearLayout
                            android:id="@+id/ll_accounts"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/default_margin"
                            tools:ignore="UseCompoundDrawables">

                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:innerRadius="0dp"
                                android:shape="ring"
                                android:thicknessRatio="1.9"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="35dp">

                                <TextView
                                    android:id="@+id/txtElection"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:padding="@dimen/layout_padding_16dp"
                                    android:text="10"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/divider_margin"
                                android:paddingTop="@dimen/layout_padding_8dp"
                                android:text="@string/elections"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <View
                            android:layout_width="0.2dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <LinearLayout
                            android:id="@+id/ll_transfer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/default_margin"
                            tools:ignore="UseCompoundDrawables">

                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:innerRadius="0dp"
                                android:shape="ring"
                                android:thicknessRatio="1.9"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="35dp">

                                <TextView
                                    android:id="@+id/txtCandidates"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:padding="@dimen/layout_padding_16dp"
                                    android:text="10"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/divider_margin"
                                android:paddingTop="@dimen/layout_padding_8dp"
                                android:text="@string/total_candidates"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <View
                            android:layout_width="0.2dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <LinearLayout
                            android:id="@+id/ll_service_request"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/default_margin"
                            tools:ignore="UseCompoundDrawables">

                            <androidx.cardview.widget.CardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:innerRadius="0dp"
                                android:shape="ring"
                                android:thicknessRatio="1.9"
                                app:cardBackgroundColor="@color/colorPrimary"
                                app:cardCornerRadius="35dp">

                                <TextView
                                    android:id="@+id/txtVoters"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentTop="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:padding="@dimen/layout_padding_16dp"
                                    android:text="10"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/divider_margin"
                                android:paddingTop="@dimen/layout_padding_8dp"
                                android:text="@string/total_voters"
                                android:textColor="@color/white" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dashboard_gray_background"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_margin">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="60dp"
                        android:paddingBottom="@dimen/layout_padding_16dp">


                        <LinearLayout
                            android:id="@+id/ll_tracking"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/default_margin"
                            tools:ignore="UseCompoundDrawables">


                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/divider_margin"
                android:orientation="horizontal"
                android:paddingTop="@dimen/layout_padding_8dp"
                android:paddingBottom="@dimen/layout_padding_8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/row_padding_right"
                    android:layout_marginLeft="@dimen/row_padding_right"
                    android:layout_marginTop="@dimen/divider_margin"
                    android:layout_weight="1"
                    android:text="@string/need_help"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/row_padding_right"
                    android:layout_marginRight="@dimen/row_padding_right"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/divider_margin"
                        android:autoLink="phone"
                        android:gravity="end"
                        android:text="@string/help_line_number"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/divider_margin"
                        android:autoLink="email"
                        android:gravity="end"
                        android:text="@string/contact_email"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>